SERVER-48076: fixing all compile errors with clang