src/mongo/db/auth/sasl_scram_server_conversation.h
@@ -40,7 +40,7 @@ namespace mongo {
  *  Server side authentication session for SASL SCRAM-SHA-1/256.
  */
 template <typename Policy>
-class SaslSCRAMServerMechanism : public MakeServerMechanism<Policy> {
+class SaslSCRAMServerMechanism final : public MakeServerMechanism<Policy> {
 public:
     using HashBlock = typename Policy::HashBlock;
 
